--- a/calendar-component/package.json
+++ b/calendar-component/package.json
@@ -19,7 +19,11 @@
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "@vitejs/plugin-react": "^5.1.0",
+    "tailwindcss": "^3.4.18",
+    "typescript": "~5.9.3",
+    "vite": "^7.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -27,15 +31,11 @@
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "^5.1.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "tailwindcss": "^3.4.18",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.3",
-    "vite": "^7.2.2"
+    "typescript-eslint": "^8.46.3"
   },
   "eslintConfig": {
     "extends": [
